[gd_scene load_steps=11 format=2]

[ext_resource path="res://SessionUIManager.gd" type="Script" id=1]
[ext_resource path="res://SessionManager.gd" type="Script" id=2]
[ext_resource path="res://Sprites/—Pngtree—education blackboard green culture_3881393.png" type="Texture" id=3]
[ext_resource path="res://EraserRegular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://LevelSelection.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Free-Chalkboard-Backgrounds.jpg" type="Texture" id=6]
[ext_resource path="res://Shaders/fillTimer.tres" type="Shader" id=7]
[ext_resource path="res://Minigames/multipleChooise/mc.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/cut_start = Vector2( -0.016, -0.532 )
shader_param/cut_end = Vector2( 0.316, 1000 )
shader_param/which_side = -1.0

[node name="Session" type="Node2D"]
script = ExtResource( 2 )
difficulty = 1
mcScene = ExtResource( 8 )

[node name="SessionUI" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="BetweenMinigames" type="Node2D" parent="SessionUI"]

[node name="Sprite" type="Sprite" parent="SessionUI/BetweenMinigames"]
position = Vector2( 640.55, 361.875 )
scale = Vector2( 0.426491, 0.361125 )
texture = ExtResource( 3 )

[node name="Score" type="RichTextLabel" parent="SessionUI/BetweenMinigames"]
margin_left = 431.0
margin_top = 227.0
margin_right = 951.0
margin_bottom = 350.0
custom_fonts/normal_font = SubResource( 1 )
text = "PuntuaciOn: 0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextMinigame" type="RichTextLabel" parent="SessionUI/BetweenMinigames"]
margin_left = 358.0
margin_top = 350.0
margin_right = 1143.0
margin_bottom = 473.0
custom_fonts/normal_font = SubResource( 1 )
text = "Siguiente minijuego:"

[node name="Aplazo" type="RichTextLabel" parent="SessionUI/BetweenMinigames"]
margin_left = 988.0
margin_top = 54.0
margin_right = 1508.0
margin_bottom = 177.0
custom_fonts/normal_font = SubResource( 1 )
text = "APLAZOS
0/5"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OnMinigame" type="CanvasLayer" parent="SessionUI"]

[node name="ChalkBoardSprite" type="TextureRect" parent="SessionUI/OnMinigame"]
material = SubResource( 2 )
margin_left = 988.0
margin_top = 647.0
margin_right = 1281.0
margin_bottom = 724.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="TimeLeft" type="RichTextLabel" parent="SessionUI/OnMinigame"]
margin_left = 997.0
margin_top = 654.0
margin_right = 1517.0
margin_bottom = 777.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Tiempo:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LevelSelection" type="Node2D" parent="."]
script = ExtResource( 5 )
testing = true
levelToTest = "Iterator"
